Strings: move hardcoded text to resources

--- a/SimpleWeather.UWP/Controls/AQIControl.xaml
+++ b/SimpleWeather.UWP/Controls/AQIControl.xaml
@@ -2,65 +2,81 @@
     x:Class="SimpleWeather.UWP.Controls.AQIControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:SimpleWeather.UWP.Controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    MinWidth="400">
+    MinWidth="400"
+    mc:Ignorable="d">
 
     <StackPanel>
-        <toolkitControls:HeaderedContentControl HorizontalContentAlignment="Stretch"
-                                                Style="{StaticResource SectionLabelStyle}">
+        <toolkitControls:HeaderedContentControl HorizontalContentAlignment="Stretch" Style="{StaticResource SectionLabelStyle}">
             <toolkitControls:HeaderedContentControl.Header>
-                <TextBlock Text="{x:Bind ViewModel.Title, Mode=OneWay, FallbackValue='Air Quality Index'}"
-                           FontSize="15" />
+                <TextBlock FontSize="15" Text="{x:Bind ViewModel.Title, Mode=OneWay, FallbackValue='Air Quality Index'}" />
             </toolkitControls:HeaderedContentControl.Header>
             <RelativePanel MinHeight="90">
-                <TextBlock x:Name="AQIndex" Width="75"
-                           TextAlignment="Center" VerticalAlignment="Top"
-                           FontSize="32" FontWeight="Medium"
-                           Padding="15,5,5,5"
-                           Text="{x:Bind ViewModel.Index, Mode=OneWay, FallbackValue='101'}"
-                           RelativePanel.AlignTopWithPanel="True"
-                           RelativePanel.AlignLeftWithPanel="True"
-                           RelativePanel.Above="AQIProgresBar">
+                <TextBlock
+                    x:Name="AQIndex"
+                    Width="75"
+                    Padding="15,5,5,5"
+                    VerticalAlignment="Top"
+                    FontSize="32"
+                    FontWeight="Medium"
+                    RelativePanel.Above="AQIProgresBar"
+                    RelativePanel.AlignLeftWithPanel="True"
+                    RelativePanel.AlignTopWithPanel="True"
+                    Text="{x:Bind ViewModel.Index, Mode=OneWay, FallbackValue='101'}"
+                    TextAlignment="Center">
                     <TextBlock.Foreground>
                         <SolidColorBrush Color="{x:Bind ViewModel.ProgressColor, Mode=OneWay, FallbackValue='Red'}" />
                     </TextBlock.Foreground>
                 </TextBlock>
-                <TextBlock x:Name="AQILevel" FontSize="18" FontWeight="Medium"
-                           Padding="5,2"
-                           Text="{x:Bind ViewModel.Level, Mode=OneWay, FallbackValue='Unhealthy'}"
-                           RelativePanel.RightOf="AQIndex"
-                           RelativePanel.AlignTopWithPanel="True"
-                           RelativePanel.AlignRightWithPanel="True"
-                           RelativePanel.AlignRightWith="AQIndex" />
-                <TextBlock x:Name="AQIBlock" FontSize="14"
-                           Padding="5,2" VerticalAlignment="Top"
-                           MaxLines="3"
-                           TextWrapping="Wrap" TextTrimming="WordEllipsis"
-                           Text="{x:Bind ViewModel.Description, Mode=OneWay, FallbackValue='Everyone may begin to experience health effects; members of sensitive groups may experience more serious health effects'}"
-                           RelativePanel.RightOf="AQIndex"
-                           RelativePanel.Below="AQILevel"
-                           RelativePanel.Above="AQIProgresBar"
-                           RelativePanel.AlignRightWithPanel="True"
-                           RelativePanel.AlignRightWith="AQIndex" />
-                <muxc:ProgressBar x:Name="AQIProgresBar" Height="5" Value="{x:Bind ViewModel.Progress, Mode=OneWay, FallbackValue='50'}" Maximum="100"
-                                  Background="{ThemeResource ProgressBarBackgroundBrush}"
-                                  Margin="15,5"
-                                  RelativePanel.AlignBottomWithPanel="True"
-                                  RelativePanel.AlignLeftWithPanel="True"
-                                  RelativePanel.AlignRightWithPanel="True">
+                <TextBlock
+                    x:Name="AQILevel"
+                    Padding="5,2"
+                    FontSize="18"
+                    FontWeight="Medium"
+                    RelativePanel.AlignRightWith="AQIndex"
+                    RelativePanel.AlignRightWithPanel="True"
+                    RelativePanel.AlignTopWithPanel="True"
+                    RelativePanel.RightOf="AQIndex"
+                    Text="{x:Bind ViewModel.Level, Mode=OneWay, FallbackValue='Unhealthy'}" />
+                <TextBlock
+                    x:Name="AQIBlock"
+                    Padding="5,2"
+                    VerticalAlignment="Top"
+                    FontSize="14"
+                    MaxLines="3"
+                    RelativePanel.Above="AQIProgresBar"
+                    RelativePanel.AlignRightWith="AQIndex"
+                    RelativePanel.AlignRightWithPanel="True"
+                    RelativePanel.Below="AQILevel"
+                    RelativePanel.RightOf="AQIndex"
+                    Text="{x:Bind ViewModel.Description, Mode=OneWay, FallbackValue='Everyone may begin to experience health effects; members of sensitive groups may experience more serious health effects'}"
+                    TextTrimming="WordEllipsis"
+                    TextWrapping="Wrap" />
+                <muxc:ProgressBar
+                    x:Name="AQIProgresBar"
+                    Height="5"
+                    Margin="15,5"
+                    Background="{ThemeResource ProgressBarBackgroundBrush}"
+                    Maximum="100"
+                    RelativePanel.AlignBottomWithPanel="True"
+                    RelativePanel.AlignLeftWithPanel="True"
+                    RelativePanel.AlignRightWithPanel="True"
+                    Value="{x:Bind ViewModel.Progress, Mode=OneWay, FallbackValue='50'}">
                     <muxc:ProgressBar.Foreground>
                         <SolidColorBrush Color="{x:Bind ViewModel.ProgressColor, Mode=OneWay, FallbackValue='Red'}" />
                     </muxc:ProgressBar.Foreground>
                 </muxc:ProgressBar>
             </RelativePanel>
         </toolkitControls:HeaderedContentControl>
-        <TextBlock x:Name="Attribution" Padding="5" FontSize="12"
-                   HorizontalAlignment="Center">
+        <TextBlock
+            x:Name="Attribution"
+            Padding="5"
+            HorizontalAlignment="Center"
+            FontSize="12">
             <Span><Run x:Uid="Credit_Prefix" Text="Data from" /><Run Text=" World Air Quality Index Project" /></Span>
         </TextBlock>
     </StackPanel>
