--- a/SimpleWeather.UWP/Controls/SunPhasePanel.xaml
+++ b/SimpleWeather.UWP/Controls/SunPhasePanel.xaml
@@ -2,13 +2,13 @@
     x:Class="SimpleWeather.UWP.Controls.SunPhasePanel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SimpleWeather.UWP.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:SimpleWeather.UWP.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:win2d="using:Microsoft.Graphics.Canvas.UI.Xaml"
-    mc:Ignorable="d"
     d:DesignHeight="200"
-    d:DesignWidth="600">
+    d:DesignWidth="600"
+    mc:Ignorable="d">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -30,7 +30,10 @@
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <win2d:CanvasVirtualControl x:Name="Canvas" Background="Transparent" ClearColor="Transparent"
-                         RegionsInvalidated="Canvas_RegionsInvalidated" CreateResources="Canvas_CreateResources">
-    </win2d:CanvasVirtualControl>
+    <win2d:CanvasVirtualControl
+        x:Name="Canvas"
+        Background="Transparent"
+        ClearColor="Transparent"
+        CreateResources="Canvas_CreateResources"
+        RegionsInvalidated="Canvas_RegionsInvalidated" />
 </UserControl>
