--- a/SimpleWeather.UWP/Setup/SetupSettingsPage.xaml
+++ b/SimpleWeather.UWP/Setup/SetupSettingsPage.xaml
@@ -2,26 +2,54 @@
     x:Class="SimpleWeather.UWP.Setup.SetupSettingsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SimpleWeather.UWP.Setup"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:SimpleWeather.UWP.Setup"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <ScrollViewer>
         <StackPanel Orientation="Vertical" RequestedTheme="Dark">
-            <Viewbox Height="50" Margin="0,32,0,0" HorizontalAlignment="Center">
+            <Viewbox
+                Height="50"
+                Margin="0,32,0,0"
+                HorizontalAlignment="Center">
                 <SymbolIcon Symbol="Setting" />
             </Viewbox>
-            <TextBlock x:Uid="Setup_PreferencesPrompt" Text="Customize your settings below" HorizontalAlignment="Center" FontSize="18" Padding="8" />
-            <StackPanel Orientation="Vertical" RequestedTheme="Light" Background="White" MaxWidth="640" Padding="16" Margin="0,16,0,0">
-                <TextBlock x:Uid="Pref_SummaryUnits" Text="Display units in:" Padding="0,5" />
-                <StackPanel Orientation="Horizontal" Padding="10,5">
-                    <RadioButton x:Name="Fahrenheit" x:Uid="Pref_UnitFahrenheit" Content="Fahrenheit (Imperial)" GroupName="Unit"
-                                 Margin="0,0,10,0" />
-                    <RadioButton x:Name="Celsius" x:Uid="Pref_UnitCelsius" Content="Celsius (Metric)" GroupName="Unit"
-                                 Margin="10,0,0,0" />
+            <TextBlock
+                x:Uid="Setup_PreferencesPrompt"
+                Padding="8"
+                HorizontalAlignment="Center"
+                FontSize="18"
+                Text="Customize your settings below" />
+            <StackPanel
+                MaxWidth="640"
+                Margin="0,16,0,0"
+                Padding="16"
+                Background="White"
+                Orientation="Vertical"
+                RequestedTheme="Light">
+                <TextBlock
+                    x:Uid="Pref_SummaryUnits"
+                    Padding="0,5"
+                    Text="Display units in:" />
+                <StackPanel Padding="10,5" Orientation="Horizontal">
+                    <RadioButton
+                        x:Name="Fahrenheit"
+                        x:Uid="Pref_UnitFahrenheit"
+                        Margin="0,0,10,0"
+                        Content="Fahrenheit (Imperial)"
+                        GroupName="Unit" />
+                    <RadioButton
+                        x:Name="Celsius"
+                        x:Uid="Pref_UnitCelsius"
+                        Margin="10,0,0,0"
+                        Content="Celsius (Metric)"
+                        GroupName="Unit" />
                 </StackPanel>
-                <ComboBox x:Name="RefreshComboBox" MinWidth="260" Margin="0,10">
+                <ComboBox
+                    x:Name="RefreshComboBox"
+                    MinWidth="260"
+                    Margin="0,10">
                     <ComboBox.Items>
                         <TextBlock x:Uid="Pref_Refresh60Min" Text="1 hour" />
                         <TextBlock x:Uid="Pref_Refresh2Hrs" Text="2 hours" />
@@ -30,11 +58,14 @@
                         <TextBlock x:Uid="Pref_Refresh12Hrs" Text="12 hours" />
                     </ComboBox.Items>
                     <ComboBox.Header>
-                        <TextBlock x:Uid="Pref_RefreshInterval" Text="Update Frequency" />
+                        <TextBlock x:Uid="Pref_SummaryRefresh" Text="Update Frequency" />
                     </ComboBox.Header>
                 </ComboBox>
-                <TextBlock x:Uid="Pref_WeatherAlerts" Text="Show notifications for weather alerts:" Padding="0,5" />
-                <StackPanel Orientation="Horizontal" Padding="10,5">
+                <TextBlock
+                    x:Uid="Pref_WeatherAlerts"
+                    Padding="0,5"
+                    Text="Show notifications for weather alerts:" />
+                <StackPanel Padding="10,5" Orientation="Horizontal">
                     <ToggleSwitch x:Name="AlertSwitch" />
                 </StackPanel>
             </StackPanel>
