--- a/SimpleWeather.UWP/Controls/BeaufortControl.xaml
+++ b/SimpleWeather.UWP/Controls/BeaufortControl.xaml
@@ -2,13 +2,13 @@
     x:Class="SimpleWeather.UWP.Controls.BeaufortControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:SimpleWeather.UWP.Controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    MinWidth="340">
+    MinWidth="340"
+    mc:Ignorable="d">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -25,35 +25,44 @@
     </UserControl.Resources>
 
     <StackPanel>
-        <toolkitControls:HeaderedContentControl HorizontalContentAlignment="Stretch"
-                                                Style="{StaticResource SectionLabelStyle}">
+        <toolkitControls:HeaderedContentControl HorizontalContentAlignment="Stretch" Style="{StaticResource SectionLabelStyle}">
             <toolkitControls:HeaderedContentControl.Header>
-                <TextBlock Text="{x:Bind ViewModel.Beaufort.Label, Mode=OneWay, FallbackValue='Beaufort'}"
-                           FontSize="15" />
+                <TextBlock FontSize="15" Text="{x:Bind ViewModel.Beaufort.Label, Mode=OneWay, FallbackValue='Beaufort'}" />
             </toolkitControls:HeaderedContentControl.Header>
             <RelativePanel>
-                <TextBlock x:Name="BeaufortIcon" Text="{x:Bind ViewModel.Beaufort.Icon, Mode=OneWay, FallbackValue='&#xf0c2;'}"
-                           FontSize="32" Width="75" Padding="5"
-                           VerticalAlignment="Center"
-                           Foreground="{ThemeResource BeaufortPaintColorBrush}"
-                           Style="{StaticResource WeatherIcon}"
-                           RelativePanel.AlignTopWithPanel="True"
-                           RelativePanel.AlignLeftWithPanel="True"
-                           RelativePanel.Above="BeaufortProgressBar" />
-                <TextBlock x:Name="BeaufortDescription" TextLineBounds="Tight"
-                           FontSize="18" Padding="5"
-                           VerticalAlignment="Center"
-                           Text="{x:Bind ViewModel.Beaufort.Value, Mode=OneWay, FallbackValue='Violent Storm'}"
-                           RelativePanel.RightOf="BeaufortIcon"
-                           RelativePanel.AlignTopWithPanel="True"
-                           RelativePanel.AlignRightWithPanel="True"
-                           RelativePanel.Above="BeaufortProgressBar" />
-                <muxc:ProgressBar x:Name="BeaufortProgressBar" Height="5" Value="{x:Bind ViewModel.BeaufortScaleProgress, Mode=OneWay, FallbackValue='66'}" Maximum="100"
-                                  Background="{ThemeResource ProgressBarBackgroundBrush}"
-                                  Margin="15,5"
-                                  RelativePanel.AlignBottomWithPanel="True"
-                                  RelativePanel.AlignLeftWithPanel="True"
-                                  RelativePanel.AlignRightWithPanel="True">
+                <TextBlock
+                    x:Name="BeaufortIcon"
+                    Width="75"
+                    Padding="5"
+                    VerticalAlignment="Center"
+                    FontSize="32"
+                    Foreground="{ThemeResource BeaufortPaintColorBrush}"
+                    RelativePanel.Above="BeaufortProgressBar"
+                    RelativePanel.AlignLeftWithPanel="True"
+                    RelativePanel.AlignTopWithPanel="True"
+                    Style="{StaticResource WeatherIcon}"
+                    Text="{x:Bind ViewModel.Beaufort.Icon, Mode=OneWay, FallbackValue='&#xf0c2;'}" />
+                <TextBlock
+                    x:Name="BeaufortDescription"
+                    Padding="5"
+                    VerticalAlignment="Center"
+                    FontSize="18"
+                    RelativePanel.Above="BeaufortProgressBar"
+                    RelativePanel.AlignRightWithPanel="True"
+                    RelativePanel.AlignTopWithPanel="True"
+                    RelativePanel.RightOf="BeaufortIcon"
+                    Text="{x:Bind ViewModel.Beaufort.Value, Mode=OneWay, FallbackValue='Violent Storm'}"
+                    TextLineBounds="Tight" />
+                <muxc:ProgressBar
+                    x:Name="BeaufortProgressBar"
+                    Height="5"
+                    Margin="15,5"
+                    Background="{ThemeResource ProgressBarBackgroundBrush}"
+                    Maximum="100"
+                    RelativePanel.AlignBottomWithPanel="True"
+                    RelativePanel.AlignLeftWithPanel="True"
+                    RelativePanel.AlignRightWithPanel="True"
+                    Value="{x:Bind ViewModel.BeaufortScaleProgress, Mode=OneWay, FallbackValue='66'}">
                     <muxc:ProgressBar.Foreground>
                         <SolidColorBrush Color="{x:Bind ViewModel.BeaufortScaleProgressColor, Mode=OneWay, FallbackValue='Maroon'}" />
                     </muxc:ProgressBar.Foreground>
