--- a/SimpleWeather.UWP/Controls/DataTemplates.xaml
+++ b/SimpleWeather.UWP/Controls/DataTemplates.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
+    x:Class="SimpleWeather.UWP.Controls.DataTemplates"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    x:Class="SimpleWeather.UWP.Controls.DataTemplates"
     xmlns:controls="using:SimpleWeather.Controls"
     xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.UWP.Controls"
@@ -19,25 +19,33 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <FontIcon x:Name="PinIcon"
-                      FontFamily="Segoe MDL2 Assets"
-                      Glyph="&#xE7B7;"
-                      Margin="-8,0,0,0"
-                      Width="50" Foreground="{ThemeResource SimpleBlue}"
-                      Visibility="{x:Bind helpers:BindingExtensions.BoolToVisibility(IsEmpty, x:True), FallbackValue=Collapsed, Mode=OneWay}"
-                      Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" />
-            <TextBlock x:Name="LocationName"
-                       Text="{x:Bind LocationName, Mode=OneWay}"
-                       FontSize="14"
-                       Padding="5"
-                       TextAlignment="Left"
-                       Grid.Row="0" Grid.Column="1" />
-            <TextBlock x:Name="LocationCountry"
-                       Text="{x:Bind LocationCountry, Mode=OneWay}"
-                       FontSize="12"
-                       Padding="5"
-                       TextAlignment="Left"
-                       Grid.Row="1" Grid.Column="1" />
+            <FontIcon
+                x:Name="PinIcon"
+                Grid.Row="0"
+                Grid.RowSpan="2"
+                Grid.Column="0"
+                Width="50"
+                Margin="-8,0,0,0"
+                FontFamily="Segoe MDL2 Assets"
+                Foreground="{ThemeResource SimpleBlue}"
+                Glyph="&#xE7B7;"
+                Visibility="{x:Bind helpers:BindingExtensions.BoolToVisibility(IsEmpty, x:True), FallbackValue=Collapsed, Mode=OneWay}" />
+            <TextBlock
+                x:Name="LocationName"
+                Grid.Row="0"
+                Grid.Column="1"
+                Padding="5"
+                FontSize="14"
+                Text="{x:Bind LocationName, Mode=OneWay}"
+                TextAlignment="Left" />
+            <TextBlock
+                x:Name="LocationCountry"
+                Grid.Row="1"
+                Grid.Column="1"
+                Padding="5"
+                FontSize="12"
+                Text="{x:Bind LocationCountry, Mode=OneWay}"
+                TextAlignment="Left" />
         </Grid>
     </DataTemplate>
 </ResourceDictionary>
