--- a/SimpleWeather.UWP/Controls/ForecastGraphPanel.xaml
+++ b/SimpleWeather.UWP/Controls/ForecastGraphPanel.xaml
@@ -2,19 +2,22 @@
     x:Class="SimpleWeather.UWP.Controls.ForecastGraphPanel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="using:SimpleWeather.Controls"
-    xmlns:local="using:SimpleWeather.UWP.Controls"
-    xmlns:uiControls="using:Microsoft.UI.Xaml.Controls"
-    xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:Win1809Present="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,7)"
-    mc:Ignorable="d"
+    xmlns:controls="using:SimpleWeather.Controls"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:SimpleWeather.UWP.Controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+    xmlns:uiControls="using:Microsoft.UI.Xaml.Controls"
     d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DesignWidth="400"
+    mc:Ignorable="d">
 
     <UserControl.Resources>
-        <Style TargetType="ToggleButton" x:Key="ToggleButtonNoDisableRevealStyle" BasedOn="{StaticResource ToggleButtonRevealStyle}">
+        <Style
+            x:Key="ToggleButtonNoDisableRevealStyle"
+            BasedOn="{StaticResource ToggleButtonRevealStyle}"
+            TargetType="ToggleButton">
             <Setter Property="Background" Value="{ThemeResource ToggleButtonRevealBackground}" />
             <Setter Property="Foreground" Value="{ThemeResource ToggleButtonForeground}" />
             <Setter Property="BorderBrush" Value="{ThemeResource ToggleButtonRevealBorderBrush}" />
@@ -30,7 +33,22 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="ToggleButton">
-                        <Grid x:Name="RootGrid" Background="{TemplateBinding Background}" Win1809Present:CornerRadius="{TemplateBinding CornerRadius}">
+                        <Grid
+                            x:Name="RootGrid"
+                            Win1809Present:CornerRadius="{TemplateBinding CornerRadius}"
+                            Background="{TemplateBinding Background}">
+                            <ContentPresenter
+                                x:Name="ContentPresenter"
+                                Padding="{TemplateBinding Padding}"
+                                HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                                Win1809Present:CornerRadius="{TemplateBinding CornerRadius}"
+                                AutomationProperties.AccessibilityView="Raw"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}"
+                                Content="{TemplateBinding Content}"
+                                ContentTemplate="{TemplateBinding ContentTemplate}"
+                                ContentTransitions="{TemplateBinding ContentTransitions}" />
                             <VisualStateManager.VisualStateGroups>
                                 <VisualStateGroup x:Name="CommonStates">
                                     <VisualState x:Name="Normal">
@@ -141,7 +159,6 @@
                                     </VisualState>
                                 </VisualStateGroup>
                             </VisualStateManager.VisualStateGroups>
-                            <ContentPresenter x:Name="ContentPresenter" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Win1809Present:CornerRadius="{TemplateBinding CornerRadius}" Content="{TemplateBinding Content}" ContentTransitions="{TemplateBinding ContentTransitions}" ContentTemplate="{TemplateBinding ContentTemplate}" Padding="{TemplateBinding Padding}" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" AutomationProperties.AccessibilityView="Raw" />
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
@@ -150,72 +167,124 @@
     </UserControl.Resources>
 
     <StackPanel Orientation="Vertical">
-        <VisualStateManager.VisualStateGroups>
-            <VisualStateGroup x:Name="WidthStates">
-                <VisualState x:Name="Large">
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="1007"/>
-                    </VisualState.StateTriggers>
-                    <VisualState.Setters>
-                        <Setter Target="Label.Visibility" Value="Visible"/>
-                    </VisualState.Setters>
-                </VisualState>
-                <VisualState x:Name="Medium">
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="641"/>
-                    </VisualState.StateTriggers>
-                    <VisualState.Setters>
-                        <Setter Target="Label.Visibility" Value="Visible"/>
-                    </VisualState.Setters>
-                </VisualState>
-                <VisualState x:Name="Mobile">
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="0"/>
-                    </VisualState.StateTriggers>
-                    <VisualState.Setters>
-                        <Setter Target="Label.Visibility" Value="Collapsed"/>
-                    </VisualState.Setters>
-                </VisualState>
-            </VisualStateGroup>
-        </VisualStateManager.VisualStateGroups>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,20">
-            <ToggleButton x:Name="TempToggleButton" Margin="5,0" Padding="4" Tag="Temp"
-                          Style="{ThemeResource ToggleButtonNoDisableRevealStyle}">
+        <StackPanel
+            Margin="0,20"
+            HorizontalAlignment="Right"
+            Orientation="Horizontal">
+            <ToggleButton
+                x:Name="TempToggleButton"
+                Margin="5,0"
+                Padding="4"
+                Style="{ThemeResource ToggleButtonNoDisableRevealStyle}"
+                Tag="Temp">
                 <ToggleButton.Content>
                     <StackPanel Orientation="Horizontal">
-                        <FontIcon Margin="4,0" Glyph="&#xf055;" FontSize="15" Style="{StaticResource WeatherFontIcon}" VerticalAlignment="Center"
-                                  FontFamily="/Assets/WeatherIcons/weathericons-regular-webfont.ttf#Weather Icons" />
-                        <TextBlock x:Name="Label" x:Uid="Label_Temperature" Text="Temperature" FontSize="14" VerticalAlignment="Center" Margin="4,0,0,0"
-                                   TextLineBounds="Tight" />
+                        <FontIcon
+                            Margin="4,0"
+                            VerticalAlignment="Center"
+                            FontFamily="/Assets/WeatherIcons/weathericons-regular-webfont.ttf#Weather Icons"
+                            FontSize="15"
+                            Glyph="&#xf055;"
+                            Style="{StaticResource WeatherFontIcon}" />
+                        <TextBlock
+                            x:Name="Label"
+                            x:Uid="Label_Temperature"
+                            Margin="4,0,0,0"
+                            VerticalAlignment="Center"
+                            FontSize="14"
+                            Text="Temperature"
+                            TextLineBounds="Tight" />
                     </StackPanel>
                 </ToggleButton.Content>
             </ToggleButton>
-            <ToggleButton x:Name="WindToggleButton" Margin="5,0" Padding="4" Tag="Wind"
-                          Style="{ThemeResource ToggleButtonNoDisableRevealStyle}">
+            <ToggleButton
+                x:Name="WindToggleButton"
+                Margin="5,0"
+                Padding="4"
+                Style="{ThemeResource ToggleButtonNoDisableRevealStyle}"
+                Tag="Wind">
                 <ToggleButton.Content>
                     <StackPanel Orientation="Horizontal">
-                        <FontIcon Margin="4,0" Glyph="&#xf050;" FontSize="15" Style="{StaticResource WeatherFontIcon}"
-                                  FontFamily="/Assets/WeatherIcons/weathericons-regular-webfont.ttf#Weather Icons" />
-                        <TextBlock x:Uid="Label_Wind" Text="Wind" FontSize="14" VerticalAlignment="Center" Margin="4,0,0,0"
-                                   TextLineBounds="Tight" Visibility="{Binding ElementName=Label, Path=Visibility, Mode=OneWay}" />
+                        <FontIcon
+                            Margin="4,0"
+                            FontFamily="/Assets/WeatherIcons/weathericons-regular-webfont.ttf#Weather Icons"
+                            FontSize="15"
+                            Glyph="&#xf050;"
+                            Style="{StaticResource WeatherFontIcon}" />
+                        <TextBlock
+                            x:Uid="Label_Wind"
+                            Margin="4,0,0,0"
+                            VerticalAlignment="Center"
+                            FontSize="14"
+                            Text="Wind"
+                            TextLineBounds="Tight"
+                            Visibility="{Binding ElementName=Label, Path=Visibility, Mode=OneWay}" />
                     </StackPanel>
                 </ToggleButton.Content>
             </ToggleButton>
-            <ToggleButton x:Name="RainToggleButton" Margin="5,0" Padding="4" Tag="Rain"
-                          Style="{ThemeResource ToggleButtonNoDisableRevealStyle}">
+            <ToggleButton
+                x:Name="RainToggleButton"
+                Margin="5,0"
+                Padding="4"
+                Style="{ThemeResource ToggleButtonNoDisableRevealStyle}"
+                Tag="Rain">
                 <ToggleButton.Content>
                     <StackPanel Orientation="Horizontal">
-                        <FontIcon Margin="4,0" Glyph="&#xf078;" FontSize="15" Style="{StaticResource WeatherFontIcon}"
-                                  FontFamily="/Assets/WeatherIcons/weathericons-regular-webfont.ttf#Weather Icons" />
-                        <TextBlock x:Uid="Label_Precipitation" Text="Precipitation" FontSize="14" VerticalAlignment="Center" Margin="4,0,0,0"
-                                   TextLineBounds="Tight" Visibility="{Binding ElementName=Label, Path=Visibility, Mode=OneWay}" />
+                        <FontIcon
+                            Margin="4,0"
+                            FontFamily="/Assets/WeatherIcons/weathericons-regular-webfont.ttf#Weather Icons"
+                            FontSize="15"
+                            Glyph="&#xf078;"
+                            Style="{StaticResource WeatherFontIcon}" />
+                        <TextBlock
+                            x:Uid="Label_Precipitation"
+                            Margin="4,0,0,0"
+                            VerticalAlignment="Center"
+                            FontSize="14"
+                            Text="Precipitation"
+                            TextLineBounds="Tight"
+                            Visibility="{Binding ElementName=Label, Path=Visibility, Mode=OneWay}" />
                     </StackPanel>
                 </ToggleButton.Content>
             </ToggleButton>
         </StackPanel>
-        <local:LineView x:Name="GraphView" Height="250"
-                        DrawGridLines="True" DrawDotLine="True" DrawDataLabels="True"
-                        DrawIconLabels="True" DrawGraphBackground="True" DrawDotPoints="True"
-                        Loaded="GraphLineView_Loaded" />
+        <local:LineView
+            x:Name="GraphView"
+            Height="250"
+            DrawDataLabels="True"
+            DrawDotLine="True"
+            DrawDotPoints="True"
+            DrawGraphBackground="True"
+            DrawGridLines="True"
+            DrawIconLabels="True"
+            Loaded="GraphLineView_Loaded" />
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="WidthStates">
+                <VisualState x:Name="Large">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="1007" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="Label.Visibility" Value="Visible" />
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="Medium">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="641" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="Label.Visibility" Value="Visible" />
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="Mobile">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="0" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="Label.Visibility" Value="Collapsed" />
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
     </StackPanel>
 </UserControl>
