--- a/SimpleWeather.UWP/Controls/UVControl.xaml
+++ b/SimpleWeather.UWP/Controls/UVControl.xaml
@@ -2,13 +2,13 @@
     x:Class="SimpleWeather.UWP.Controls.UVControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:SimpleWeather.UWP.Controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    MinWidth="340">
+    MinWidth="340"
+    mc:Ignorable="d">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -25,36 +25,45 @@
     </UserControl.Resources>
 
     <StackPanel>
-        <toolkitControls:HeaderedContentControl HorizontalContentAlignment="Stretch"
-                                                Style="{StaticResource SectionLabelStyle}">
+        <toolkitControls:HeaderedContentControl HorizontalContentAlignment="Stretch" Style="{StaticResource SectionLabelStyle}">
             <toolkitControls:HeaderedContentControl.Header>
-                <TextBlock Text="{x:Bind ViewModel.Title, Mode=OneWay, FallbackValue='UV Index'}"
-                           FontSize="15" />
+                <TextBlock FontSize="15" Text="{x:Bind ViewModel.Title, Mode=OneWay, FallbackValue='UV Index'}" />
             </toolkitControls:HeaderedContentControl.Header>
             <RelativePanel>
-                <TextBlock x:Name="UVIcon" Text="{x:Bind ViewModel.Icon, Mode=OneWay, FallbackValue='&#xf00d;'}"
-                           FontSize="32" Width="75" Padding="5"
-                           VerticalAlignment="Center"
-                           Foreground="{ThemeResource SunPaintColorBrush}"
-                           Style="{StaticResource WeatherIcon}"
-                           RelativePanel.AlignTopWithPanel="True"
-                           RelativePanel.AlignLeftWithPanel="True"
-                           RelativePanel.Above="UVProgressBar" />
-                <TextBlock x:Name="UVDescription" TextLineBounds="Tight"
-                           FontSize="18" Padding="5"
-                           VerticalAlignment="Center"
-                           RelativePanel.RightOf="UVIcon"
-                           RelativePanel.AlignTopWithPanel="True"
-                           RelativePanel.AlignRightWithPanel="True"
-                           RelativePanel.Above="UVProgressBar">
-                        <Span><Run Text="{x:Bind ViewModel.Index, Mode=OneWay, FallbackValue='9'}" /><Run Text=", " /><Run Text="{x:Bind ViewModel.Description, Mode=OneWay, FallbackValue='Very High'}" /></Span>
+                <TextBlock
+                    x:Name="UVIcon"
+                    Width="75"
+                    Padding="5"
+                    VerticalAlignment="Center"
+                    FontSize="32"
+                    Foreground="{ThemeResource SunPaintColorBrush}"
+                    RelativePanel.Above="UVProgressBar"
+                    RelativePanel.AlignLeftWithPanel="True"
+                    RelativePanel.AlignTopWithPanel="True"
+                    Style="{StaticResource WeatherIcon}"
+                    Text="{x:Bind ViewModel.Icon, Mode=OneWay, FallbackValue='&#xf00d;'}" />
+                <TextBlock
+                    x:Name="UVDescription"
+                    Padding="5"
+                    VerticalAlignment="Center"
+                    FontSize="18"
+                    RelativePanel.Above="UVProgressBar"
+                    RelativePanel.AlignRightWithPanel="True"
+                    RelativePanel.AlignTopWithPanel="True"
+                    RelativePanel.RightOf="UVIcon"
+                    TextLineBounds="Tight">
+                    <Span><Run Text="{x:Bind ViewModel.Index, Mode=OneWay, FallbackValue='9'}" /><Run Text=", " /><Run Text="{x:Bind ViewModel.Description, Mode=OneWay, FallbackValue='Very High'}" /></Span>
                 </TextBlock>
-                <muxc:ProgressBar x:Name="UVProgressBar" Height="5" Value="{x:Bind ViewModel.Progress, Mode=OneWay, FallbackValue='66'}" Maximum="100"
-                                  Background="{ThemeResource ProgressBarBackgroundBrush}"
-                                  Margin="15,5"
-                                  RelativePanel.AlignBottomWithPanel="True"
-                                  RelativePanel.AlignLeftWithPanel="True"
-                                  RelativePanel.AlignRightWithPanel="True">
+                <muxc:ProgressBar
+                    x:Name="UVProgressBar"
+                    Height="5"
+                    Margin="15,5"
+                    Background="{ThemeResource ProgressBarBackgroundBrush}"
+                    Maximum="100"
+                    RelativePanel.AlignBottomWithPanel="True"
+                    RelativePanel.AlignLeftWithPanel="True"
+                    RelativePanel.AlignRightWithPanel="True"
+                    Value="{x:Bind ViewModel.Progress, Mode=OneWay, FallbackValue='66'}">
                     <muxc:ProgressBar.Foreground>
                         <SolidColorBrush Color="{x:Bind ViewModel.ProgressColor, Mode=OneWay, FallbackValue='Maroon'}" />
                     </muxc:ProgressBar.Foreground>
