--- a/SimpleWeather.UWP/Main/WeatherDetailsPage.xaml
+++ b/SimpleWeather.UWP/Main/WeatherDetailsPage.xaml
@@ -3,15 +3,15 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:SimpleWeather.Controls"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.UWP.Main"
     xmlns:localcontrols="using:SimpleWeather.UWP.Controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    DataContext="{x:Bind Forecasts, Mode=OneWay}">
+    DataContext="{x:Bind Forecasts, Mode=OneWay}"
+    mc:Ignorable="d">
 
     <Page.Resources>
         <Style x:Key="ListViewItemStyle" TargetType="ListViewItem">
@@ -37,35 +37,35 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="ListViewItem">
                         <ListViewItemPresenter
+                            HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                            VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                            CheckBoxBrush="{ThemeResource ListViewItemCheckBoxBrush}"
+                            CheckBrush="{ThemeResource ListViewItemCheckBrush}"
+                            CheckMode="{ThemeResource ListViewItemCheckMode}"
+                            ContentMargin="{TemplateBinding Padding}"
                             ContentTransitions="{TemplateBinding ContentTransitions}"
                             Control.IsTemplateFocusTarget="True"
+                            DisabledOpacity="{ThemeResource ListViewItemDisabledThemeOpacity}"
+                            DragBackground="{ThemeResource ListViewItemDragBackground}"
+                            DragForeground="{ThemeResource ListViewItemDragForeground}"
+                            DragOpacity="{ThemeResource ListViewItemDragThemeOpacity}"
+                            FocusBorderBrush="{ThemeResource ListViewItemFocusBorderBrush}"
+                            FocusSecondaryBorderBrush="{ThemeResource ListViewItemFocusSecondaryBorderBrush}"
                             FocusVisualMargin="{TemplateBinding FocusVisualMargin}"
                             FocusVisualPrimaryBrush="{TemplateBinding FocusVisualPrimaryBrush}"
                             FocusVisualPrimaryThickness="{TemplateBinding FocusVisualPrimaryThickness}"
                             FocusVisualSecondaryBrush="{TemplateBinding FocusVisualSecondaryBrush}"
                             FocusVisualSecondaryThickness="{TemplateBinding FocusVisualSecondaryThickness}"
-                            SelectionCheckMarkVisualEnabled="{ThemeResource ListViewItemSelectionCheckMarkVisualEnabled}"
-                            CheckBrush="{ThemeResource ListViewItemCheckBrush}"
-                            CheckBoxBrush="{ThemeResource ListViewItemCheckBoxBrush}"
-                            DragBackground="{ThemeResource ListViewItemDragBackground}"
-                            DragForeground="{ThemeResource ListViewItemDragForeground}"
-                            FocusBorderBrush="{ThemeResource ListViewItemFocusBorderBrush}"
-                            FocusSecondaryBorderBrush="{ThemeResource ListViewItemFocusSecondaryBorderBrush}"
                             PlaceholderBackground="{ThemeResource ListViewItemPlaceholderBackground}"
                             PointerOverBackground="{ThemeResource ListViewItemBackgroundPointerOver}"
                             PointerOverForeground="{ThemeResource ListViewItemForegroundPointerOver}"
+                            PressedBackground="{ThemeResource ListViewItemBackgroundPressed}"
+                            ReorderHintOffset="{ThemeResource ListViewItemReorderHintThemeOffset}"
                             SelectedBackground="{ThemeResource ListViewItemBackgroundSelected}"
                             SelectedForeground="{ThemeResource ListViewItemForegroundSelected}"
                             SelectedPointerOverBackground="{ThemeResource ListViewItemBackgroundSelectedPointerOver}"
-                            PressedBackground="{ThemeResource ListViewItemBackgroundPressed}"
                             SelectedPressedBackground="{ThemeResource ListViewItemBackgroundSelectedPressed}"
-                            DisabledOpacity="{ThemeResource ListViewItemDisabledThemeOpacity}"
-                            DragOpacity="{ThemeResource ListViewItemDragThemeOpacity}"
-                            ReorderHintOffset="{ThemeResource ListViewItemReorderHintThemeOffset}"
-                            HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-                            VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
-                            ContentMargin="{TemplateBinding Padding}"
-                            CheckMode="{ThemeResource ListViewItemCheckMode}" />
+                            SelectionCheckMarkVisualEnabled="{ThemeResource ListViewItemSelectionCheckMarkVisualEnabled}" />
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
@@ -77,19 +77,38 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Border Grid.Row="0" BorderBrush="{ThemeResource TextBoxDisabledBorderThemeBrush}" BorderThickness="0,0,0,0.5">
+        <Border
+            Grid.Row="0"
+            BorderBrush="{ThemeResource TextBoxDisabledBorderThemeBrush}"
+            BorderThickness="0,0,0,0.5">
             <Viewbox Height="48" HorizontalAlignment="Left">
-                <TextBlock Text="{x:Bind WeatherView.Location, Mode=OneWay, FallbackValue='New York, NY'}"
-                           FontSize="16" Padding="16" />
+                <TextBlock
+                    Padding="16"
+                    FontSize="16"
+                    Text="{x:Bind WeatherView.Location, Mode=OneWay, FallbackValue='New York, NY'}" />
             </Viewbox>
         </Border>
-        <ListView x:Name="ListControl" SelectionMode="None" IsItemClickEnabled="False" Grid.Row="1"
-                  IsSwipeEnabled="False" AllowDrop="False" CanReorderItems="False" CanDragItems="False"
-                  HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" ItemsSource="{x:Bind Forecasts, Mode=OneWay}"
-                  DataFetchSize="24" ShowsScrollingPlaceholders="True" ContainerContentChanging="ListControl_ContainerContentChanging">
+        <ListView
+            x:Name="ListControl"
+            Grid.Row="1"
+            HorizontalAlignment="Stretch"
+            HorizontalContentAlignment="Stretch"
+            AllowDrop="False"
+            CanDragItems="False"
+            CanReorderItems="False"
+            ContainerContentChanging="ListControl_ContainerContentChanging"
+            DataFetchSize="24"
+            IsItemClickEnabled="False"
+            IsSwipeEnabled="False"
+            ItemsSource="{x:Bind Forecasts, Mode=OneWay}"
+            SelectionMode="None"
+            ShowsScrollingPlaceholders="True">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <Border Background="{ThemeResource ToggleButtonBackgroundThemeBrush}" BorderBrush="{ThemeResource TextBoxDisabledBorderThemeBrush}" BorderThickness="0,0,0,0.5">
+                    <Border
+                        Background="{ThemeResource ToggleButtonBackgroundThemeBrush}"
+                        BorderBrush="{ThemeResource TextBoxDisabledBorderThemeBrush}"
+                        BorderThickness="0,0,0,0.5">
                         <localcontrols:WeatherDetailPanel x:Name="DetailItem" />
                     </Border>
                 </DataTemplate>
@@ -100,14 +119,23 @@
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
             <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem" BasedOn="{StaticResource ListViewItemStyle}">
+                <Style BasedOn="{StaticResource ListViewItemStyle}" TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
                 </Style>
             </ListView.ItemContainerStyle>
         </ListView>
-        <ProgressRing Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Height="50" Width="50" IsActive="True"
-                      Visibility="{Binding Count, Mode=OneWay, Converter={StaticResource valueVisibilityConverter}, ConverterParameter=true, FallbackValue='Visible'}" />
-        <muxc:ProgressBar IsIndeterminate="True" Grid.Row="1" VerticalAlignment="Bottom"
-                          Visibility="{Binding IsLoading, Mode=OneWay, Converter={StaticResource booleanToVisibilityConverter}, FallbackValue='Collapsed'}" />
+        <ProgressRing
+            Grid.Row="1"
+            Width="50"
+            Height="50"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            IsActive="True"
+            Visibility="{Binding Count, Mode=OneWay, Converter={StaticResource valueVisibilityConverter}, ConverterParameter=true, FallbackValue='Visible'}" />
+        <muxc:ProgressBar
+            Grid.Row="1"
+            VerticalAlignment="Bottom"
+            IsIndeterminate="True"
+            Visibility="{Binding IsLoading, Mode=OneWay, Converter={StaticResource booleanToVisibilityConverter}, FallbackValue='Collapsed'}" />
     </Grid>
 </helpers:CustomPage>
