--- a/SimpleWeather.UWP/Main/WeatherRadarPage.xaml
+++ b/SimpleWeather.UWP/Main/WeatherRadarPage.xaml
@@ -3,17 +3,19 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:SimpleWeather.Controls"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.UWP.Main"
     xmlns:localcontrols="using:SimpleWeather.UWP.Controls"
-    xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource RegionBrush}">
         <Border x:Name="RadarWebViewContainer" />
-        <ProgressRing x:Name="LoadingRing" Foreground="{ThemeResource SystemControlForegroundAccentBrush}"
-                      Visibility="Collapsed" />
+        <ProgressRing
+            x:Name="LoadingRing"
+            Foreground="{ThemeResource SystemControlForegroundAccentBrush}"
+            Visibility="Collapsed" />
     </Grid>
 </helpers:CustomPage>
