--- a/SimpleWeather.UWP/Preferences/Settings_About.xaml
+++ b/SimpleWeather.UWP/Preferences/Settings_About.xaml
@@ -2,17 +2,24 @@
     x:Class="SimpleWeather.UWP.Preferences.Settings_About"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SimpleWeather.UWP.Preferences"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:SimpleWeather.UWP.Preferences"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
     Background="{ThemeResource RegionBrush}"
-    NavigationCacheMode="Required">
+    NavigationCacheMode="Required"
+    mc:Ignorable="d">
 
     <StackPanel Padding="16">
-        <TextBlock Name="AppName" Text="SimpleWeather" Style="{StaticResource TitleTextBlockStyle}"
-                               Foreground="{ThemeResource SystemBaseHighColor}" />
-        <TextBlock Name="Version" Text="v0.00" Style="{StaticResource BodyTextBlockStyle}" 
-                               Foreground="{ThemeResource SystemBaseMediumHighColor}" />
+        <TextBlock
+            Name="AppName"
+            x:Uid="AppName"
+            Foreground="{ThemeResource SystemBaseHighColor}"
+            Style="{StaticResource TitleTextBlockStyle}"
+            Text="SimpleWeather" />
+        <TextBlock
+            Name="Version"
+            Foreground="{ThemeResource SystemBaseMediumHighColor}"
+            Style="{StaticResource BodyTextBlockStyle}"
+            Text="v0.00" />
     </StackPanel>
 </Page>
