--- a/SimpleWeather.UWP/Preferences/Settings_General.xaml
+++ b/SimpleWeather.UWP/Preferences/Settings_General.xaml
@@ -2,84 +2,171 @@
     x:Class="SimpleWeather.UWP.Preferences.Settings_General"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SimpleWeather.UWP.Preferences"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:SimpleWeather.UWP.Preferences"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
     Background="{ThemeResource RegionBrush}"
-    NavigationCacheMode="Enabled">
+    NavigationCacheMode="Enabled"
+    mc:Ignorable="d">
 
     <Grid>
-        <ScrollViewer HorizontalScrollMode="Disabled" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto" Padding="16,0">
+        <ScrollViewer
+            Padding="16,0"
+            HorizontalScrollMode="Disabled"
+            VerticalScrollBarVisibility="Auto"
+            VerticalScrollMode="Auto">
             <StackPanel>
-                <TextBlock x:Name="GeneralHeader" x:Uid="Pref_GeneralHeader" Text="General Settings"
-                                       Style="{StaticResource SettingTitleStyle}"/>
-                <TextBlock x:Uid="Pref_SummaryUnits" Text="Display units in:"
-                                       Style="{StaticResource PrefTitleStyle}" />
-                <StackPanel Orientation="Horizontal" Padding="10,5">
-                    <RadioButton x:Name="Fahrenheit" x:Uid="Pref_UnitFahrenheit" Content="Fahrenheit (Imperial)" GroupName="Unit"
-                                 Margin="0,0,10,0" />
-                    <RadioButton x:Name="Celsius" x:Uid="Pref_UnitCelsius" Content="Celsius (Metric)" GroupName="Unit"
-                                 Margin="10,0,0,0" />
+                <TextBlock
+                    x:Name="GeneralHeader"
+                    x:Uid="Pref_GeneralHeader"
+                    Style="{StaticResource SettingTitleStyle}"
+                    Text="General Settings" />
+                <TextBlock
+                    x:Uid="Pref_SummaryUnits"
+                    Style="{StaticResource PrefTitleStyle}"
+                    Text="Display units in:" />
+                <StackPanel Padding="10,5" Orientation="Horizontal">
+                    <RadioButton
+                        x:Name="Fahrenheit"
+                        x:Uid="Pref_UnitFahrenheit"
+                        Margin="0,0,10,0"
+                        Content="Fahrenheit (Imperial)"
+                        GroupName="Unit" />
+                    <RadioButton
+                        x:Name="Celsius"
+                        x:Uid="Pref_UnitCelsius"
+                        Margin="10,0,0,0"
+                        Content="Celsius (Metric)"
+                        GroupName="Unit" />
                 </StackPanel>
-                <Rectangle Height="1" Fill="LightGray" Margin="0,7.5" />
-                <TextBlock x:Uid="Pref_SummaryFollowGPS" Text="Follow current location via GPS" Style="{StaticResource PrefTitleStyle}" />
-                <StackPanel Orientation="Horizontal" Padding="10,5">
+                <Rectangle
+                    Height="1"
+                    Margin="0,7.5"
+                    Fill="LightGray" />
+                <TextBlock
+                    x:Uid="Pref_SummaryFollowGPS"
+                    Style="{StaticResource PrefTitleStyle}"
+                    Text="Follow current location via GPS" />
+                <StackPanel Padding="10,5" Orientation="Horizontal">
                     <ToggleSwitch x:Name="FollowGPS" />
                 </StackPanel>
-                <Rectangle Height="1" Fill="LightGray" Margin="0,7.5" />
-                <TextBlock x:Uid="Pref_UserTheme" Text="Choose a theme" Style="{StaticResource PrefTitleStyle}" />
-                <StackPanel Orientation="Horizontal" Padding="10,5">
-                    <RadioButton x:Name="LightMode" x:Uid="Pref_LightMode" Content="Light" />
-                    <RadioButton x:Name="DarkMode" x:Uid="Pref_DarkMode" Content="Dark" />
-                    <RadioButton x:Name="SystemMode" x:Uid="Pref_SystemMode" Content="System Theme" />
+                <Rectangle
+                    Height="1"
+                    Margin="0,7.5"
+                    Fill="LightGray" />
+                <TextBlock
+                    x:Uid="Pref_UserTheme"
+                    Style="{StaticResource PrefTitleStyle}"
+                    Text="Choose a theme" />
+                <StackPanel Padding="10,5" Orientation="Horizontal">
+                    <RadioButton
+                        x:Name="LightMode"
+                        x:Uid="Pref_LightMode"
+                        Content="Light" />
+                    <RadioButton
+                        x:Name="DarkMode"
+                        x:Uid="Pref_DarkMode"
+                        Content="Dark" />
+                    <RadioButton
+                        x:Name="SystemMode"
+                        x:Uid="Pref_SystemMode"
+                        Content="System Theme" />
                 </StackPanel>
-                <Rectangle Height="1" Fill="LightGray" Margin="0,7.5" />
-                <ComboBox x:Name="RefreshComboBox" MinWidth="260" Margin="0,10">
+                <Rectangle
+                    Height="1"
+                    Margin="0,7.5"
+                    Fill="LightGray" />
+                <ComboBox
+                    x:Name="RefreshComboBox"
+                    MinWidth="260"
+                    Margin="0,10">
                     <ComboBox.Items>
-                        <TextBlock x:Uid="Pref_Refresh60Min" Text="1 hour"/>
-                        <TextBlock x:Uid="Pref_Refresh2Hrs" Text="2 hours"/>
-                        <TextBlock x:Uid="Pref_Refresh3Hrs" Text="3 hours"/>
-                        <TextBlock x:Uid="Pref_Refresh6Hrs" Text="6 hours"/>
-                        <TextBlock x:Uid="Pref_Refresh12Hrs" Text="12 hours"/>
+                        <TextBlock x:Uid="Pref_Refresh60Min" Text="1 hour" />
+                        <TextBlock x:Uid="Pref_Refresh2Hrs" Text="2 hours" />
+                        <TextBlock x:Uid="Pref_Refresh3Hrs" Text="3 hours" />
+                        <TextBlock x:Uid="Pref_Refresh6Hrs" Text="6 hours" />
+                        <TextBlock x:Uid="Pref_Refresh12Hrs" Text="12 hours" />
                     </ComboBox.Items>
                     <ComboBox.Header>
-                        <TextBlock x:Uid="Pref_RefreshInterval" Text="Update Frequency" Style="{StaticResource PrefTitleStyle}" />
+                        <TextBlock
+                            x:Uid="Pref_SummaryRefresh"
+                            Style="{StaticResource PrefTitleStyle}"
+                            Text="Update Frequency" />
                     </ComboBox.Header>
                 </ComboBox>
-                <Rectangle Height="1" Fill="LightGray" Margin="0,7.5" />
-                <TextBlock x:Uid="Pref_WeatherAlerts" Text="Show notifications for weather alerts:" Style="{StaticResource PrefTitleStyle}" />
-                <StackPanel Orientation="Horizontal" Padding="10,5">
+                <Rectangle
+                    Height="1"
+                    Margin="0,7.5"
+                    Fill="LightGray" />
+                <TextBlock
+                    x:Uid="Pref_WeatherAlerts"
+                    Style="{StaticResource PrefTitleStyle}"
+                    Text="Show notifications for weather alerts:" />
+                <StackPanel Padding="10,5" Orientation="Horizontal">
                     <ToggleSwitch x:Name="AlertSwitch" />
                 </StackPanel>
-                <Rectangle Height="1" Fill="LightGray" Margin="0,7.5" />
-                <ComboBox x:Name="APIComboBox" HorizontalAlignment="Left" MinWidth="260" Margin="0,10"
-                                      x:Uid="API_Box" PlaceholderText="Select Weather Provider">
+                <Rectangle
+                    Height="1"
+                    Margin="0,7.5"
+                    Fill="LightGray" />
+                <ComboBox
+                    x:Name="APIComboBox"
+                    x:Uid="API_Box"
+                    MinWidth="260"
+                    Margin="0,10"
+                    HorizontalAlignment="Left"
+                    PlaceholderText="Select Weather Provider">
                     <ComboBox.Header>
-                        <TextBlock x:Uid="API_Label" Text="Weather Provider" Style="{StaticResource PrefTitleStyle}" />
+                        <TextBlock
+                            x:Uid="API_Label"
+                            Style="{StaticResource PrefTitleStyle}"
+                            Text="Weather Provider" />
                     </ComboBox.Header>
                 </ComboBox>
-                <Rectangle Height="1" Fill="Transparent" Margin="0,7.5" />
+                <Rectangle
+                    Height="1"
+                    Margin="0,7.5"
+                    Fill="Transparent" />
                 <StackPanel x:Name="KeyPanel">
-                    <TextBlock x:Uid="Pref_PersonalKey" Text="Use personal provider key:" Style="{StaticResource PrefTitleStyle}" />
-                    <StackPanel Orientation="Horizontal" Padding="10,5">
+                    <TextBlock
+                        x:Uid="Pref_PersonalKey"
+                        Style="{StaticResource PrefTitleStyle}"
+                        Text="Use personal provider key:" />
+                    <StackPanel Padding="10,5" Orientation="Horizontal">
                         <ToggleSwitch x:Name="PersonalKeySwitch" />
                     </StackPanel>
-                    <Rectangle Height="1" Fill="Transparent" Margin="0,7.5" />
-                    <TextBlock x:Uid="KeyBox" Text="API Key"  Style="{StaticResource PrefTitleStyle}"
-                                           Visibility="{x:Bind KeyEntry.Visibility, Mode=OneWay}"/>
-                    <Border x:Name="KeyBorder" BorderThickness="2" BorderBrush="DarkGray"
-                                        HorizontalAlignment="Left" Padding="10,4" MinWidth="260"
-                                        Visibility="{x:Bind KeyEntry.Visibility, Mode=OneWay}">
-                        <TextBlock x:Name="KeyEntry" Visibility="Visible"
-                                               Tapped="KeyEntry_Tapped"
-                                               x:Uid="KeyBox" Text="API Key"
-                                               GotFocus="KeyEntry_GotFocus" />
+                    <Rectangle
+                        Height="1"
+                        Margin="0,7.5"
+                        Fill="Transparent" />
+                    <TextBlock
+                        x:Uid="KeyBox"
+                        Style="{StaticResource PrefTitleStyle}"
+                        Text="API Key"
+                        Visibility="{x:Bind KeyEntry.Visibility, Mode=OneWay}" />
+                    <Border
+                        x:Name="KeyBorder"
+                        MinWidth="260"
+                        Padding="10,4"
+                        HorizontalAlignment="Left"
+                        BorderBrush="DarkGray"
+                        BorderThickness="2"
+                        Visibility="{x:Bind KeyEntry.Visibility, Mode=OneWay}">
+                        <TextBlock
+                            x:Name="KeyEntry"
+                            x:Uid="KeyBox"
+                            GotFocus="KeyEntry_GotFocus"
+                            Tapped="KeyEntry_Tapped"
+                            Text="API Key"
+                            Visibility="Visible" />
                     </Border>
-                    <HyperlinkButton x:Name="RegisterKeyButton"
-                                     x:Uid="RegisterKeyBox" Content="Register for API Key here"
-                                     Padding="0,10" Visibility="{x:Bind KeyEntry.Visibility, Mode=OneWay}"
-                                     Style="{ThemeResource HyperlinkButtonStyle}" />
+                    <HyperlinkButton
+                        x:Name="RegisterKeyButton"
+                        x:Uid="RegisterKeyBox"
+                        Padding="0,10"
+                        Content="Register for API Key here"
+                        Style="{ThemeResource HyperlinkButtonStyle}"
+                        Visibility="{x:Bind KeyEntry.Visibility, Mode=OneWay}" />
                 </StackPanel>
             </StackPanel>
         </ScrollViewer>
